--- a/tactiletriana/src/main/resources/fxml/HouseView.fxml
+++ b/tactiletriana/src/main/resources/fxml/HouseView.fxml
@@ -9,6 +9,6 @@
 
 <fx:root styleClass="house-view" type="Pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Rectangle fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="#cdcdcd" height="200.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="5.0" width="450.0" />
+      <Rectangle styleClass="house-view-child" fx:id="rectangle" arcHeight="5.0" arcWidth="5.0" fill="#cdcdcd" height="200.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="5.0" width="450.0" />
    </children>
 </fx:root>
