--- a/tactiletriana/src/main/resources/fxml/ControlView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ControlView.fxml
@@ -10,8 +10,8 @@
 
 <fx:root styleClass="control-view" spacing="5.0" type="HBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button fx:id="pauseButton" mnemonicParsing="false" text="Pause" />
-      <Button fx:id="disableTrianaButton" mnemonicParsing="false" text="Disable Triana" />
+      <Button id="toggle-play" fx:id="pauseButton" mnemonicParsing="false" text="Pause" />
+      <Button id="toggle-triana" fx:id="disableTrianaButton" mnemonicParsing="false" text="Disable Triana" />
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
