--- a/tactiletriana/src/main/resources/fxml/TouchView.fxml
+++ b/tactiletriana/src/main/resources/fxml/TouchView.fxml
@@ -9,10 +9,13 @@
 <?import nl.utwente.ewi.caes.tactiletriana.gui.touch.house.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.touch.node.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.touch.device.*?>
+<?import nl.utwente.ewi.caes.tactiletriana.gui.touch.background.*?>
 
 <fx:root styleClass="touch-view" type="TactilePane" fx:id="root" bordersCollide="true" proximityThreshold="0"
          minWidth="1600" minHeight="900" 
          xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     
-         <!-- The children of this view are all added in the corresponding .java file -->
+    <BackgroundView fx:id="backgroundView" TactilePane.draggable="false" />
+    
+    <!-- Most of the children of this view are added in the corresponding .java file -->
 </fx:root>
