--- a/tactiletriana/src/main/resources/fxml/ConfigurationView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ConfigurationView.fxml
@@ -31,14 +31,20 @@
          </padding>
       </HBox>
    </bottom>
-   <center>
-      <GridPane BorderPane.alignment="CENTER">
+   <top>
+      <Label styleClass="title" text="Configuration Panel" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </BorderPane.margin></Label>
+   </top>
+   <left>
+      <GridPane BorderPane.alignment="TOP_LEFT">
          <children>
             <CheckBox fx:id="fullScreenCheckBox" mnemonicParsing="false" text="Full Screen">
                <GridPane.margin>
                   <Insets bottom="2.0" right="5.0" />
                </GridPane.margin></CheckBox>
-            <ComboBox fx:id="detailScreenComboBox" prefWidth="100.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
+            <ComboBox fx:id="detailScreenComboBox" prefWidth="100.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets bottom="3.0" right="5.0" />
                </GridPane.margin></ComboBox>
@@ -54,7 +60,7 @@
                <GridPane.margin>
                   <Insets bottom="3.0" right="5.0" />
                </GridPane.margin></TextField>
-            <ComboBox fx:id="touchScreenComboBox" prefWidth="100.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+            <ComboBox fx:id="touchScreenComboBox" prefWidth="100.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="3.0" right="5.0" />
                </GridPane.margin></ComboBox>
@@ -67,15 +73,15 @@
                   <Insets right="5.0" />
                </GridPane.margin>
             </Label>
-            <Button fx:id="toggleServerButton" mnemonicParsing="false" text="Start Server" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <Button fx:id="toggleServerButton" mnemonicParsing="false" text="Start Server" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
                <GridPane.margin>
-                  <Insets bottom="3.0" />
+                  <Insets bottom="3.0" right="5.0" />
                </GridPane.margin>
             </Button>
          </children>
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" />
-            <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
             <ColumnConstraints hgrow="NEVER" />
          </columnConstraints>
          <rowConstraints>
@@ -84,16 +90,18 @@
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="0.0" vgrow="ALWAYS" />
          </rowConstraints>
          <BorderPane.margin>
             <Insets left="5.0" right="5.0" top="5.0" />
          </BorderPane.margin>
       </GridPane>
-   </center>
-   <top>
-      <Label styleClass="title" text="Configuration Panel" BorderPane.alignment="CENTER">
+   </left>
+   <center>
+      <TextArea fx:id="textArea" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </BorderPane.margin></Label>
-   </top>
+            <Insets bottom="3.0" right="5.0" top="5.0" />
+         </BorderPane.margin>
+      </TextArea>
+   </center>
 </fx:root>
