--- a/tactiletriana/src/main/resources/fxml/TouchView.fxml
+++ b/tactiletriana/src/main/resources/fxml/TouchView.fxml
@@ -12,6 +12,7 @@
 <?import nl.utwente.ewi.caes.tactiletriana.gui.touch.background.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.touch.trash.*?>
 <?import nl.utwente.ewi.caes.tactiletriana.gui.touch.control.*?>
+<?import nl.utwente.ewi.caes.tactiletriana.gui.customcontrols.*?>
 
 <fx:root styleClass="touch-view" type="TactilePane" fx:id="root" bordersCollide="true" proximityThreshold="0"
          minWidth="1600" minHeight="900" 
@@ -19,6 +20,7 @@
     
     <BackgroundView fx:id="backgroundView" TactilePane.draggable="false" />
     <TrashView fx:id="trashView" TactilePane.draggable="false" rotate="90" />
+    <FloatPane fx:id="networkOverlay" TactilePane.draggable="false" />
     <ControlView fx:id="controlView" TactilePane.draggable="false" rotate="90" />
     
     <!-- Most of the children of this view are added in the corresponding .java file -->
