--- a/tactiletriana/src/main/resources/fxml/ControlView.fxml
+++ b/tactiletriana/src/main/resources/fxml/ControlView.fxml
@@ -11,11 +11,11 @@
 <fx:root styleClass="control-view" spacing="5.0" type="HBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
 
-      <Button styleClass="control-view-button" fx:id="pauseButton" mnemonicParsing="false" text="Pause" />
-      <Button styleClass="control-view-button" fx:id="disableTrianaButton" mnemonicParsing="false" text="Disable Triana" />
+      <Button styleClass="control-view-button" fx:id="pauseButton" mnemonicParsing="false" />
+      <Button styleClass="control-view-button" fx:id="disableTrianaButton" mnemonicParsing="false" text="" />
 
    </children>
    <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="150.0" />
+      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
    </padding>
 </fx:root>
