--- a/tactiletriana/src/main/resources/fxml/WeatherView.fxml
+++ b/tactiletriana/src/main/resources/fxml/WeatherView.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.geometry.*?>
 
 <fx:root styleClass="weather-view" type="GridPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
@@ -19,7 +21,20 @@
    <children>
       <Label text="Radiance: " />
       <Label fx:id="radianceValueLabel" text="00" GridPane.columnIndex="1" />
+      <ImageView fx:id="radianceImg" fitHeight="50" fitWidth="50" preserveRatio="true" StackPane.alignment="CENTER_LEFT" GridPane.columnIndex="2">
+        <image>
+            <Image url="images/radiance.png" />
+        </image>
+      </ImageView>
       <Label text="Temperature: " GridPane.rowIndex="1" />
       <Label fx:id="temperatureValueLabel" text="00" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <ImageView fx:id="temperatureImg" fitHeight="50" fitWidth="50" preserveRatio="true" StackPane.alignment="CENTER_LEFT" GridPane.columnIndex="2" GridPane.rowIndex="1">
+        <image>
+            <Image url="images/temperature.png" />
+        </image>
+      </ImageView>      
    </children>
+    <padding>
+      <Insets bottom="5.0" left="5.0" right="25.0" top="5.0" />
+   </padding>
 </fx:root>
