--- a/tactiletriana/src/main/resources/stylesheets/style.css
+++ b/tactiletriana/src/main/resources/stylesheets/style.css
@@ -105,6 +105,18 @@ application.
     -fx-border-width: 1px;
 }
 
+.slider .track{
+    -fx-background-color:linear-gradient(to bottom, white,lightblue);
+    -fx-border-color:black;
+    -fx-border-width:1px;
+}
+
+.slider .thumb {
+    -fx-background-color: linear-gradient(to bottom,#D7E4ED ,#BBC7CE);
+     -fx-effect: innershadow( gaussian, black, 3, 0.1, 0, 0 );
+    /*-fx-border-radius: 4;*/
+}
+
 .control-view-button {
     -fx-font-size: 18px;
     -fx-font-weight: bold;
@@ -132,14 +144,17 @@ application.
     -fx-background-position: center center;
 }
 
-.trash-view {
-    -fx-background-color: white;
-}
 
 .device-config-view {
     -fx-padding:10px;
+    -fx-font-weight: bold;
 }
 
+.trash-view-background {
+    -fx-background-color:darkgray;
+    -fx-border-color: black;
+    -fx-border-width: 1px;
+}
 
 
 //Graph styling
