--- a/tactiletriana/src/main/resources/fxml/Carousel.fxml
+++ b/tactiletriana/src/main/resources/fxml/Carousel.fxml
@@ -11,9 +11,9 @@
 
 <fx:root maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minWidth="140.0" type="BorderPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <Label fx:id="valueLabel" maxWidth="-Infinity" text="Label" textAlignment="CENTER" BorderPane.alignment="CENTER">
+      <Label fx:id="valueLabel" maxWidth="-Infinity" text="Audi A3 E-Tron" textAlignment="CENTER" BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets left="10.0" right="10.0" />
+            <Insets />
          </BorderPane.margin></Label>
    </center>
    <left>
